# wait-for-input

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindCJSON.cmake
example/: rpi.json  rpicurl.json  rpihello.json
include/wfi/: gpio.h  wfi.h
src/: fork_exec.c  main.c  wfi_access.c  wfi_config.c  wfi_core.c  wfi_gpio.c  wfi_init.c  wfi_poll.c
